--- a/dna.html
+++ b/dna.html
@@ -148,7 +148,7 @@
         <div id="controls">
             <div class="controls-wrapper">
                 <div class="control-group title">
-                    <h2>ORGANIC TYPOGRAPHY</h2>
+                    <h2>DNA 폰트</h2>
                 </div>
                 
                 <div class="control-group">
